# strom_v3

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  main.cpp  node.hpp  tree.hpp  tree_manip.hpp
data/: test.tre
include/: node.hpp  tree.hpp
strom/include/: data.hpp  datatype.hpp  genetic_code.hpp  node.hpp  partition.hpp  split.hpp  strom.hpp  tree.hpp  tree_manip.hpp  tree_summary.hpp  xstrom.hpp
